--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h2>Envie de changer de thème ?</h2>
                 <p>
                     Reveal.js en offre plusieurs: <br>
-                    <a href="?theme=default#/0/1">Default</a> -
+                    <a href="#/0/1">Default</a> -
                     <a href="?theme=sky#/0/1">Sky</a> -
                     <a href="?theme=beige#/0/1">Beige</a> -
                     <a href="?theme=simple#/0/1">Simple</a> -
