--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="slides">
         <section>
             <section>
-                <h1> Js WTF ?! </h1>
+                <h1> JS FTW ?! </h1>
 
                 <h3>rappels, bonnes pratiques, conseils</h3>
 
