--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>JS FTW - Rappels, Bonnes pratique et conseils</title>
+    <title>JS FTW ! par Boris Schapira | Rappels, Bonnes pratiques et conseils</title>
 
     <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
     <meta name="author" content="Hakim El Hattab">
@@ -38,7 +38,7 @@
     <div class="slides">
         <section>
             <section>
-                <h1> JS FTW ?! </h1>
+                <h1> JS FTW ! </h1>
 
                 <h3>rappels, bonnes pratiques, conseils</h3>
 
