--- a/index.html
+++ b/index.html
@@ -1062,6 +1062,7 @@ result = Array(16).join("wtf" - 1) + ' Batman !';
         progress: true,
         history: true,
         center: true,
+        slideNumber: true,
 
         theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
         transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
